--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,6 @@
 .header-content {
   min-height: 75vh;
-  background: linear-gradient(rgba(141, 39, 174, 0.3), rgba(141, 39, 174, 0.5)),
+  background: linear-gradient(rgba(102, 93, 104, 0.8), rgba(141, 39, 174, 0.3)),
     url("../../images/library-img.jpg") center/cover no-repeat;
   flex-direction: column;
 }
@@ -10,6 +10,6 @@
 .header-text {
   margin-top: -1.8rem;
   margin-bottom: 2.8rem;
-  opacity: 0.8;
   max-width: 770px;
+  font-weight: 400;
 }
